--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "sonner": "^1.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
