--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.33.0",
     "@hookform/resolvers": "^3.3.3",
     "@line/liff": "^2.23.0",
     "clsx": "^2.0.0",
     "consola": "^3.2.3",
     "json-templates": "^5.0.0",
+    "lucide-react": "^0.302.0",
     "react": "^18.2.0",
+    "react-aria-components": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "sonner": "^1.3.1",
@@ -41,6 +44,8 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-react-aria-components": "^1.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
