--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@adobe/react-spectrum": "^3.33.0",
     "@hookform/resolvers": "^3.3.3",
     "@line/liff": "^2.23.0",
+    "@react-aria/color": "3.0.0-beta.28",
+    "@react-spectrum/color": "3.0.0-beta.29",
+    "@react-stately/color": "^3.5.1",
     "axios": "^1.6.3",
     "clsx": "^2.0.0",
     "consola": "^3.2.3",
