--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "consola": "^3.2.3",
     "json-templates": "^5.0.0",
     "lucide-react": "^0.302.0",
+    "plausible-tracker": "^0.3.8",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.0",
     "react-dom": "^18.2.0",
