add color picker

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@hookform/resolvers": "^3.3.3",
     "@line/liff": "^2.23.0",
     "@react-aria/color": "3.0.0-beta.28",
+    "@react-aria/focus": "^3.16.0",
+    "@react-aria/i18n": "^3.10.0",
+    "@react-aria/visually-hidden": "^3.8.8",
     "@react-spectrum/color": "3.0.0-beta.29",
     "@react-stately/color": "^3.5.1",
     "axios": "^1.6.3",
