--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-aria-components": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-qr-code": "^2.0.12",
     "sonner": "^1.3.1",
     "zod": "^3.22.4"
   },
